# haqnow.community

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_SUMMARY.md  architecture.txt  cleanup-documents.sh  comprehensive_job_fix.py  deploy-to-server.sh  emergency_fix_27_docs.py  final_comprehensive_fix.py  fix_batch_stuck_jobs.py  fix_stuck_ocr_jobs.py  force_enqueue_delayed_jobs.py  history.txt  prompt.txt  setup-dev.sh  start-local.sh  stop-local.sh  test-all-features.sh  test-critical-features.sh  test-document.txt  test-feature-check.txt  test-upload.txt  test_runner.py  upload-test.txt  upload_result.json  verify-ai-functionality.sh  verify-critical-fixes.sh
backend/: Dockerfile.deploy  cleanup_documents.py  convert_existing_documents.py  debug_tiles.py  fix_document_status.py  fix_queued_jobs.py  fix_recent_queued_jobs.py  pyproject.toml  reprocess_document.py  test_document_913.py  test_fix.py  test_full_conversion.py  test_libreoffice.py
backend/app/: celery_app.py  collaboration.py  config.py  conversion.py  db.py  export.py  job_monitor.py  main.py  models.py  processing.py  rag.py  redaction.py  routes_auth.py  routes_documents.py  routes_search.py  s3_client.py  schemas.py  security.py  tasks.py
backend/tests/: test_api_keys.py  test_auth.py  test_comprehensive_document_management.py  test_config_env.py  test_documents.py  test_health.py  test_playwright_integration.py  test_playwright_redactions_comments.py  test_processing.py  test_redaction_pixels.py  (+1 more)
(+76 files in other folders)
